Fixes #6058 - Attachment delete icon disappears when filename is too long

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -8880,6 +8880,17 @@ a.list-group-item.active > .badge,
   padding: 4px 1px;
 }
 
+/* Fixes #6058 - Attachment delete icon disappears when filename is too long
+ * by adding ellipsis to long names and preventing it from overflowing its container
+ */
+.knowledge-base-sidebar {
+  .list-item-name {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+}
+
 .list-item-delete {
   padding: 0 10px;
 
